cleaned css files

--- a/version-actual/pages/form.html
+++ b/version-actual/pages/form.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/footer.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
   </head>
   <body>
     <!-- ============================================ -->
@@ -29,9 +33,13 @@
             <a href="../index.html" class="nav__link">Inicio</a>
           </li>
           <li class="nav__item">
-            <a href="../index.html#why-choose-us" class="nav__link">Conocenos</a>
+            <a href="../index.html#why-choose-us" class="nav__link"
+              >Conocenos</a
+            >
           </li>
-          <li class="nav__item"><a href="timetable.html" class="nav__link">Calendario</a></li>
+          <li class="nav__item">
+            <a href="timetable.html" class="nav__link">Calendario</a>
+          </li>
           <li class="nav__item">
             <a href="#cs-contact" class="nav__link">Formulario</a>
           </li>
@@ -43,16 +51,11 @@
     <!--                   Review                     -->
     <!-- ============================================ -->
 
-    <section id="reviews-1529">
+    <section id="reviews-section">
       <div class="cs-container">
         <div class="cs-content">
           <span class="cs-topper">Testimonios</span>
           <h2 class="cs-title">Ana, una voluntaria de la anterior edición</h2>
-          <p class="cs-text">
-            "Me encantó la experiencia, fue muy enriquecedora y me sentí muy
-            bien ayudando a la comunidad. Además, conocí a mucha gente
-            interesante y aprendí mucho sobre el surf y el medio ambiente."
-          </p>
         </div>
         <div class="cs-review">
           <div class="cs-image-group">
@@ -178,12 +181,14 @@
           <span class="cs-topper">Interesad@ ?</span>
           <h2 class="cs-title">Registrate Aquí</h2>
           <p class="cs-text">
-            Si tienes alguna duda o quieres más información, no dudes en
-            contactarnos. Estamos aquí para ayudarte.
+            Este formulario es el que tienes que completar para inscribirte al
+            evento, si eres una marca o quieres contactar con nosotros para
+            otras cosas tienes nuestra información abajo o puedes usar el
+            <a href="../index.html#contact">formulario de contacto</a>.
           </p>
         </div>
         <!-- Formulario -->
-        <form id="cs-form-242" name="Formulario de Contacto" method="post">
+        <form id="cs-form-contact" name="Formulario de Contacto" method="post">
           <label class="cs-label">
             Nombre
             <input
@@ -399,10 +404,18 @@
         <div class="footer-col">
           <h4>Redes Sociales</h4>
           <div class="social-links">
-            <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a href="https://www.twitter.com/"
+              ><i class="fab fa-twitter"></i
+            ></a>
+            <a href="https://www.instagram.com/"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="https://www.linkedin.com/"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
           </div>
         </div>
       </div>
