--- a/version-actual/index.html
+++ b/version-actual/index.html
@@ -821,7 +821,7 @@
                 <span class="cs-price">
                   0€<span class="cs-duration">/día</span>
                 </span>
-                <a href="" class="cs-button-solid">Inscribirse</a>
+                <a href="pages/form.html#cs-contact" class="cs-button-solid">Inscribirse</a>
               </div>
               <svg
                 class="cs-blob"
@@ -939,7 +939,7 @@
                 <span class="cs-price">
                   25€ <span class="cs-duration">/Día</span>
                 </span>
-                <a href="" class="cs-button-solid">Comprar</a>
+                <a href="pages/form.html#cs-contact" class="cs-button-solid">Comprar</a>
               </div>
               <svg
                 class="cs-blob"
@@ -1071,7 +1071,7 @@
                 <span class="cs-price">
                   100€ <span class="cs-duration">/Día</span>
                 </span>
-                <a href="" class="cs-button-solid">Inscribirse</a>
+                <a href="pages/form.html#cs-contact" class="cs-button-solid">Inscribirse</a>
               </div>
               <svg
                 class="cs-blob"
