--- a/version-actual/index.html
+++ b/version-actual/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Página con Video de Fondo</title>
+    <title>EcoSurf | Ecologia Surfeando</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/about.css" />
     <link rel="stylesheet" href="css/navbar.css" />
